--- a/chat/frontend/nginx.conf
+++ b/chat/frontend/nginx.conf
@@ -20,7 +20,7 @@ server {
 
     # Proxy requests to the backend
     location /api/ {
-        proxy_pass http://chat-backend:8080/;
+        proxy_pass http://chat-backend:88/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -30,11 +30,12 @@ server {
 
     # Proxy pentru WebSocket
     location /chat {
-        proxy_pass http://chat-backend:8080/chat;
+        proxy_pass http://chat-backend:88/chat;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 86400s;
+        proxy_send_timeout 86400s;
     }
 }
