--- a/chat/frontend/nginx.conf
+++ b/chat/frontend/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen 90;
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
@@ -8,9 +8,9 @@ server {
         try_files $uri $uri/ /index.html;
 
         # CORS configuration
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+#        add_header 'Access-Control-Allow-Origin' '*';
+#        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+#	add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
     }
 
     # Cache static assets
@@ -18,7 +18,7 @@ server {
         expires 1d;
     }
 
-    # Proxy requests to the backend
+    # Proxy for API requests
     location /api/ {
         proxy_pass http://chat-backend:88/;
         proxy_http_version 1.1;
@@ -28,8 +28,8 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Proxy pentru WebSocket
-    location /chat {
+    # WebSocket proxy - key change here!
+    location /ws {
         proxy_pass http://chat-backend:88/chat;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -37,5 +37,7 @@ server {
         proxy_set_header Host $host;
         proxy_read_timeout 86400s;
         proxy_send_timeout 86400s;
+ 	proxy_set_header X-Real-IP $remote_addr;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
