--- a/kubernetes/chat/chat-db-secret.yaml
+++ b/kubernetes/chat/chat-db-secret.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 type: Opaque
 data:
-  mysql-root-password: cm9vdHBhc3N3b3Jk # base64 encoded 'rootpassword'
-  mysql-user: Y2hhdHVzZXI= # base64 encoded 'chatuser'
-  mysql-password: Y2hhdHBhc3N3b3Jk # base64 encoded 'chatpassword'
-  mysql-database: Y2hhdA== # base64 encoded 'chat'
+  MYSQL_ROOT_PASSWORD: Y2hhdHBhc3N3b3Jk
+  MYSQL_USER: Y2hhdHVzZXI=
+  MYSQL_PASSWORD: Y2hhdHBhc3N3b3Jk
+  MYSQL_DATABASE: Y2hhdAo=
