--- a/kubernetes/chat/chat-db-secret.yaml
+++ b/kubernetes/chat/chat-db-secret.yaml
@@ -6,6 +6,6 @@ metadata:
 type: Opaque
 data:
   MYSQL_ROOT_PASSWORD: Y2hhdHBhc3N3b3Jk
-  MYSQL_USER: Y2hhdHVzZXI=
-  MYSQL_PASSWORD: Y2hhdHBhc3N3b3Jk
+  MYSQL_USER: Y2hhdHVzZXIK
+  MYSQL_PASSWORD: Y2hhdHBhc3N3b3JkCg==
   MYSQL_DATABASE: Y2hhdAo=
