--- a/chat/backend/src/main/webapp/WEB-INF/web.xml
+++ b/chat/backend/src/main/webapp/WEB-INF/web.xml
@@ -6,37 +6,38 @@
          version="4.0">
     <display-name>Chat WebSocket Application</display-name>
     
-    <!-- Configurare filtru CORS pentru a permite cereri de la frontend (portul 90) -->
+    <!-- WebSocket endpoint configuration -->
+    <context-param>
+        <param-name>webSocketEndpointPath</param-name>
+        <param-value>/chat</param-value>
+    </context-param>
+    
+    <!-- CORS filter configuration -->
     <filter>
         <filter-name>CorsFilter</filter-name>
         <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
         <init-param>
             <param-name>cors.allowed.origins</param-name>
-            <param-value>http://localhost:90</param-value>
+            <param-value>*</param-value>
         </init-param>
         <init-param>
             <param-name>cors.allowed.methods</param-name>
             <param-value>GET,POST,HEAD,OPTIONS,PUT</param-value>
-        </init-param>
-        <init-param>
-            <param-name>cors.allowed.headers</param-name>
-            <param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers</param-value>
-        </init-param>
-        <init-param>
-            <param-name>cors.exposed.headers</param-name>
-            <param-value>Access-Control-Allow-Origin,Access-Control-Allow-Credentials</param-value>
-        </init-param>
-        <init-param>
-            <param-name>cors.support.credentials</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>cors.preflight.maxage</param-name>
-            <param-value>3600</param-value>
         </init-param>
     </filter>
     <filter-mapping>
         <filter-name>CorsFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+    <!-- Add a listener to initialize your application -->
+    <listener>
+        <listener-class>com.chat.ApplicationInitializer</listener-class>
+    </listener>
+    
+    <!-- Explicitly set context path -->
+    <context-param>
+        <param-name>contextPath</param-name>
+        <param-value>/</param-value>
+    </context-param>
 </web-app>
