--- a/chat/frontend/nginx.conf
+++ b/chat/frontend/nginx.conf
@@ -6,11 +6,6 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html;
-
-        # CORS configuration
-#        add_header 'Access-Control-Allow-Origin' '*';
-#        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-#	add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
     }
 
     # Cache static assets
@@ -28,7 +23,7 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # WebSocket proxy - key change here!
+    # WebSocket proxy
     location /ws {
         proxy_pass http://chat-backend:88/chat;
         proxy_http_version 1.1;
@@ -37,7 +32,7 @@ server {
         proxy_set_header Host $host;
         proxy_read_timeout 86400s;
         proxy_send_timeout 86400s;
- 	proxy_set_header X-Real-IP $remote_addr;
-	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
