Added Azure Functionality to deploy CMS and AI app to Kubernetes

--- a/kubernetes/cms-deployment.yaml
+++ b/kubernetes/cms-deployment.yaml
@@ -35,10 +35,9 @@ spec:
           value: "vvveb"
         - name: DB_ENGINE
           value: "mysqli"
-        volumeMounts:
-        - mountPath: "/var/www/html"
-          name: cms-storage
-      volumes:
-      - name: cms-storage
-        persistentVolumeClaim:
-          claimName: cms-pvc
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 10
