--- a/kubernetes/kind-config.yaml
+++ b/kubernetes/kind-config.yaml
@@ -1,5 +1,12 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
+nodes:
+- role: control-plane
+  extraMounts:
+  - hostPath: ../cms-data
+    containerPath: /mnt/cms-data
+  - hostPath: ../cms-db-data
+    containerPath: /mnt/cms-db-data
 containerdConfigPatches:
 - |-
   [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5000"]
