--- a/azure/common/ingress.yaml
+++ b/azure/common/ingress.yaml
@@ -72,7 +72,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /ai-service/api(/|$)(.*)
+      - path: /api(/|$)(.*)
         pathType: Prefix
         backend:
           service:
