--- a/ai/frontend/nginx.conf
+++ b/ai/frontend/nginx.conf
@@ -2,34 +2,37 @@ server {
     listen 91;
     server_name localhost;
     root /usr/share/nginx/html;
-    index index.html;
+    index index.html index.htm;
 
-    # Logging configuration
-    error_log  /var/log/nginx/error.log debug;
-    access_log /var/log/nginx/access.log combined;
-
-    # Angular route handling
+    # For Angular routing
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Backend API proxy configuration
-    location /api/ {
-        proxy_pass http://ai-backend:89/;
+    # Proxy API requests to backend
+    location /api {
+        proxy_pass http://ai-backend:89;
         proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # CORS configuration
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
     }
 
-    # Static asset optimization
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-        expires 1d;
+    # Increase buffer sizes for stability
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    # Enable compression for better performance
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+    # Error pages
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
