--- a/azure/common/ingress.yaml
+++ b/azure/common/ingress.yaml
@@ -22,14 +22,14 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: statamic-app
+            name: cms-service
             port:
               number: 80
       - path: /ai
         pathType: Prefix
         backend:
           service:
-            name: statamic-app
+            name: cms-service
             port:
               number: 80
       - path: /ai-service
@@ -79,3 +79,30 @@ spec:
             name: ai-backend
             port:
               number: 89
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ai-backend-ingress
+  namespace: default
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
+    nginx.ingress.kubernetes.io/proxy-buffering: "off"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /ai-service/api(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: ai-backend
+            port:
+              number: 89
+
